
Version 2.07  2011-01-08
 * slave file's prefix name can be empty
 * FDFS_MAX_GROUPS change from 64 to 512
 * file size field in the file id changed: high 32 bits is random integer 
   when the file size < 2GB and the highest bit set to 1
 * tracker_service.c: in function list_group_storages, use strcpy 
   intead of memcpy

Version 2.06  2010-12-26
 * sync file op: do not sync the file which exists on dest storage server
   and the file size are same 
 * bug fixed: sync copy file will clear the existed file on dest storage
   server (truncate the file size to 0), this bug caused by V2.04
 * bug fixed: make temp file discard system function mkstemp, 
   use file sequence No. with pthread_mutex_lock
 * bug fixed: function fastdfs_tracker_list_groups, when parameter group_name
   is null or empty string, return all groups info
 * bug fixed: upload a file extends 2GB will fail
 * bug fixed: tracker to tracker sync system data files, in function: 
   tracker_mem_get_tracker_server, pTrackerStatus not be set properly

Version 2.05  2010-12-05
 * client/fdfs_monitor.c: add sync delay time
 * tracker/fast_task_queue.c: pTask->data = pTask->arg + arg_size; 
   change to: pTask->data = (char *)pTask->arg + arg_size;
 * bug fixed: storage_sync.c line 237 cause core dump in Ubuntu 10.04
 * upload file test use mmap, support more test_upload processes
 * client add three tools: fdfs_upload_file, fdfs_download_file and 
   fdfs_delete_file

Version 2.04  2010-11-19
 * storage.conf: tracker server ip can NOT be 127.0.0.1
 * do not catch signal SIGABRT
 * strerror change to STRERROR macro
 * sync copy file use temp filename first, rename to the correct filename 
   when sync done
 * file id use 4 bytes CRC32 signature instead of random number
 * add file: client/fdfs_crc32.c
 * one of file hash code signature function change from APHash_ex 
   to simple_hash_ex
 * bug fixed: when fdfs_storaged quit, maybe write to binlog file fail,
   the error info is "Bad file descriptor"
