@@ -36,6 +36,7 @@ ZEND_FUNCTION(fastdfs_tracker_query_storage_list);
 ZEND_FUNCTION(fastdfs_tracker_query_storage_update1);
 ZEND_FUNCTION(fastdfs_tracker_query_storage_fetch1);
 ZEND_FUNCTION(fastdfs_tracker_query_storage_list1);
+ZEND_FUNCTION(fastdfs_tracker_delete_storage);
 ZEND_FUNCTION(fastdfs_storage_upload_by_filename);
 ZEND_FUNCTION(fastdfs_storage_upload_by_filename1);
 ZEND_FUNCTION(fastdfs_storage_upload_by_filebuff);
